# Jerv

./: CMakeLists.txt  CMakePresets.json  readme.md  todo.md
app/: CMakeLists.txt
app/src/: main.cpp
scripts/generateLicenseHeaders/src/: main.js
